# Backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
problems/: models.py  serializers.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_rename_descriptin_problem_description.py  0003_alter_problem_input_format_alter_problem_language_and_more.py
qna/: models.py  serializers.py  urls.py  views.py
qna/migrations/: 0001_initial.py
solutions/: models.py  serializers.py  urls.py  views.py
solutions/migrations/: 0001_initial.py  0002_solution_execution_result.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username_alter_customuser_dept_and_more.py
